Prevent header from getting blurry

--- a/sass/home/_header.scss
+++ b/sass/home/_header.scss
@@ -39,7 +39,7 @@
 		transition: var(--transition-bezier);
 		margin: 0;
 		background-color: var(--accent-color);
-		aspect-ratio: 4.4 / 1; // Proper height regardless of the width
+		aspect-ratio: 497 / 113; // Proper height regardless of the width
 		width: 100%;
 		overflow: hidden; // Make aspect ratio set above work
 		color: transparent;
